<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact_us"
    android:background="@color/grey">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="202dp"
        android:layout_height="46dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/contact_us_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/edit_text_person_name"
        android:layout_width="257dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:ems="30"
        android:hint="@string/name_hint"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.006" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="350dp"
        android:layout_height="227dp"
        android:ems="1000"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/contact_description_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_person_name"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/submit_button"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="523dp" />
</androidx.constraintlayout.widget.ConstraintLayout>


