<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diezmos"
    android:background="@color/grey">

    <TextView
        android:id="@+id/diezmo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/payments"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/amount_entered"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_amount"
        android:textColorHint="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="321dp"
        android:layout_height="183dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516">

        <RadioButton
            android:id="@+id/tithe_payment"
            android:layout_width="310dp"
            android:layout_height="69dp"
            android:layout_margin="10px"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tithing"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/donation_payment"
            android:layout_width="310dp"
            android:layout_height="69dp"
            android:layout_margin="10px"
            android:fontFamily="@font/poppins_light"
            android:text="@string/donations"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/pay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/pay_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/result"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"

        app:layout_constraintBottom_toTopOf="@+id/pay_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

    />


</androidx.constraintlayout.widget.ConstraintLayout>